deploy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8443
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          # stream_idle_timeout: 0s
          route_config:
            virtual_hosts:
            - name: default
              domains: ["*"]
              routes:
              - match: {path: "/healthz"}
                direct_response:
                  status: 200
              - match: {prefix: "/"}
                route:
                  cluster: local_cluster
                  timeout: 0s 
                  idle_timeout: 0s
                  max_stream_duration:
                    grpc_timeout_header_max: 5s
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/dev/stdout"
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain: {filename: "/etc/certs/tls.crt"}
              private_key: {filename: "/etc/certs/tls.key"}
            alpn_protocols: h2
  clusters:
  - name: local_cluster
    http2_protocol_options: {}
    connect_timeout: 1s
    type: static
    lb_policy: round_robin
    load_assignment:
      cluster_name: local_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
